Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -3,9 +3,9 @@ title: Availability
 description: townhouse eagle mountain utah
 sections:
   - images: []
-    subtitle: 'As of September 8, 2020'
+    subtitle: 'As of September 14, 2020'
     title: Availability
     type: header
   - images:
-      - image: /images/uploads/availability-map-9-8-20.jpg
+      - image: /images/uploads/availability-map-9.14.jpg
     type: images_only
