Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -65,7 +65,7 @@ sections:
       MODEL NOW OPEN!
 
 
-      Model Hours 11 AM - 6 PM, Closed Sunday & Wednesday
+      Holiday Hours - Closed Dec 23-25, By Appointment Dec 26 - Jan 2
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
