Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -65,7 +65,7 @@ sections:
       MODEL NOW OPEN!
 
 
-      Holiday Hours - Closed Dec 23-25, By Appointment Dec 26 - Jan 2
+      Model Open 11 AM - 6 PM, closed Wednesday and Sunday
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
