Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -65,7 +65,7 @@ sections:
       MODEL NOW OPEN!
 
 
-      Model Open 11 AM - 6 PM, closed Wednesday and Sunday
+      Winter Hour 12 PM - 5 PM, closed Wednesday and Sunday, or by appointment
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
