Update Pages “documents”

--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -21,8 +21,7 @@ sections:
     title: Spring Run Townhomes & HOA Docs
     type: link_list
   - files:
-      - file: >-
-          /images/uploads/3-24-2021-purchase-and-sale-agreement-no-pref-lender.pdf
+      - file: /images/uploads/4-15-2021-purchase-and-sale-agreement-.pdf
         label: Purchase & Sale Agreement
         url: '#'
       - file: /images/uploads/spring-run-townhomes-seller-disclosures-8.28.20.pdf
