--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -8,5 +8,5 @@ sections:
     type: header
   - images:
       - image: /images/uploads/availability-map-phase-c2.jpg
-      - image: /images/uploads/availability-map-phase-c1-4.19.21.jpg
+      - image: /images/uploads/availability-map-phase-c1-4-29-21.jpg
     type: images_only
