Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -62,10 +62,7 @@ sections:
       ### Model Home Hours
 
 
-      MODEL NOW OPEN!
-
-
-      Winter Hour 12 PM - 5 PM, closed Wednesday and Sunday, or by appointment
+      By Appointment Only
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
