--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -3,10 +3,10 @@ title: Availability
 description: townhouse eagle mountain utah
 sections:
   - images: []
-    subtitle: 'As of January 21, 2020'
+    subtitle: 'As of May 10, 2021'
     title: Availability
     type: header
   - images:
-      - image: /images/uploads/availability-map-phase-c2.jpg
+      - image: ''
       - image: /images/uploads/availability-map-phase-c1-4-29-21.jpg
     type: images_only
