Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -62,7 +62,8 @@ sections:
       ### Model Home Hours
 
 
-      By Appointment Only
+      Open Mon - Sat 12:00 - 7:00 PM. Closed Wed and Sun. Please call ahead for
+      appointment.  
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
