Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -3,10 +3,10 @@ title: Availability
 description: townhouse eagle mountain utah
 sections:
   - images: []
-    subtitle: 'As of May 10, 2021'
+    subtitle: 'As of January 24, 2022'
     title: Availability
     type: header
   - images:
-      - image: ''
+      - image: /images/uploads/availability-map-phase-c2-jan-24-2022.jpg
       - image: /images/uploads/availability-map-phase-c1-4-29-21.jpg
     type: images_only
