Update Pages “floor-plans”

--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -29,7 +29,7 @@ sections:
     title: Floor Plan Options
     type: link_list
   - images:
-      - image: /images/uploads/screen-shot-2019-06-05-at-8.58.18-am.png
+      - image: /images/uploads/east-front-2.png
     title: 2 Story Walk-Up Units
     type: images_only
   - files:
