Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -62,8 +62,12 @@ sections:
       ### Model Home Hours
 
 
-      Open Mon - Sat 12:00 - 6:00 PM. Closed Wed and Sun. Please call ahead for
-      appointment.  
+      Mon-Fri by Appointment only. Open Sat 12:00 - 5:00 PM. Closed Wed and
+      Sun. 
+
+
+      Current Inventory Sold Out - New product to be released approximately
+      April.
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
