Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -62,12 +62,10 @@ sections:
       ### Model Home Hours
 
 
-      Mon-Fri by Appointment only. Open Sat 12:00 - 5:00 PM. Closed Wed and
-      Sun. 
+      Mon-Sat 1:00 - 6:00 PM. By appointment only on Wed and Closed Sun. 
 
 
-      Current Inventory Sold Out - New product to be released approximately
-      April.
+      Move-in Ready Homes Available!
 
 
       **Follow our construction progress on Instagram @SpringRunTownhomes**
