--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -5,12 +5,12 @@ sections:
   - images: []
     title: Spring Run Townhome Elevations & Floor Plans
     type: header
-  - content: >-
-      Rate Buy Down Available for 3 Move-in Ready Townhomes -  MLS # 1813179,
-      1813181, & 1813208
+  - content: ''
     images:
       - image: /images/uploads/20009-spring-run-2020.03.24_9-photo.jpg
-    subtitle: ''
+    subtitle: >-
+      Rate Buy Down Available for 3 Move-in Ready Townhomes -  MLS # 1813179,
+      1813181, & 1813208
     title: 3 Story Units With Walk-Out Basements
     type: images_only
   - images:
