Update Pages “floor-plans”

--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -34,6 +34,9 @@ sections:
     type: link_list
   - images:
       - image: /images/uploads/east-front-2.png
+    subtitle: >-
+      Rate Buy Down Available for 4 Townhomes - MLS # 1816601, 1816794, 1816799,
+      1816800
     title: 2 Story Walk-Up Units
     type: images_only
   - files:
