Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -62,7 +62,7 @@ sections:
       ### Model Home Hours
 
 
-      Mon-Sat 1:00 - 6:00 PM. By appointment only on Wed and Closed Sun. 
+      Showings by Appointment and Supra Keybox.
 
 
       Move-in Ready Homes Available!
