Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -4,7 +4,7 @@ description: >-
   Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
   ipsum Lorem ipsum Lorem ipsum 
 sections:
-  - title: Builder Rate Buy Down Available!
+  - title: '*Builder Will Buy Down Your Rate!*'
     type: header
   - content: ''
     title: ... the perfect life!
