--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -4,7 +4,8 @@ description: >-
   Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
   ipsum Lorem ipsum Lorem ipsum 
 sections:
-  - title: '*Builder Will Buy Down Your Rate!*'
+  - subtitle: Contact Aaron & Jess for details - 801-808-7096
+    title: '*Seller Will Buy Down Your Payments!*'
     type: header
   - content: ''
     title: ... the perfect life!
