--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -4,7 +4,8 @@ description: >-
   Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
   ipsum Lorem ipsum Lorem ipsum 
 sections:
-  - subtitle: Contact Aaron & Jess for details - 801-808-7096
+  - content: 'Realty Utah, LLC'
+    subtitle: Contact Aaron & Jess for details - 801-808-7096
     title: '*Seller Will Buy Down Your Payments!*'
     type: header
   - content: ''
