Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -1,7 +1,10 @@
 slug: Availability
-title: Availability
+title: Move in Ready & Availability
 description: townhouse eagle mountain utah
 sections:
+  - subtitle: 'Units 206, 207, 208'
+    title: Move In Ready Homes
+    type: content_only
   - images: []
     subtitle: 'As of June 7, 2022'
     title: Availability
