Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -1,10 +1,10 @@
-slug: Availability
+slug: Move In Ready & Availability
 title: Move in Ready & Availability
 description: townhouse eagle mountain utah
 sections:
   - subtitle: 'Units 206, 207, 208'
     title: Move In Ready Homes
-    type: content_only
+    type: header
   - images: []
     subtitle: 'As of June 7, 2022'
     title: Availability
