--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -1,4 +1,4 @@
-slug: Move In Ready & Availability
+slug: Availability
 title: Move in Ready & Availability
 description: townhouse eagle mountain utah
 sections:
