--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -4,9 +4,15 @@ description: >-
   Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
   ipsum Lorem ipsum Lorem ipsum 
 sections:
-  - content: '## Realty Utah, LLC'
+  - content: |-
+      ## Realty Utah, LLC
+
+      ##
     subtitle: Contact Aaron & Jess for details - 801-808-7096
     title: '*Seller Will Buy Down Your Payments!*'
+    type: header
+  - subtitle: '      '
+    title: Move In Ready Homes Available
     type: header
   - content: ''
     title: ... the perfect life!
