--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -4,12 +4,11 @@ description: >-
   Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
   ipsum Lorem ipsum Lorem ipsum 
 sections:
-  - content: |-
-      ## Realty Utah, LLC
-
-      # Move In Ready Homes Available
+  - content: '## Realty Utah, LLC'
     subtitle: Contact Aaron & Jess for details - 801-808-7096
     title: '*Seller Will Buy Down Your Payments!*'
+    type: header
+  - title: Move In Ready Homes Available
     type: header
   - content: ''
     title: ... the perfect life!
