Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -4,7 +4,7 @@ description: townhouse eagle mountain utah
 sections:
   - content: '# \*\*With the Rate Buy Down - Your Payments Can Be Less Than Expected\*\*'
     images:
-      - image: /images/uploads/1.jpg
+      - image: /images/uploads/unit-206.jpg
       - image: /images/uploads/2.jpg
       - image: /images/uploads/3.jpg
     subtitle: ''
