--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -3,13 +3,15 @@ title: Move in Ready & Availability
 description: townhouse eagle mountain utah
 sections:
   - content: '# \*\*With the Rate Buy Down - Your Payments Can Be Less Than Expected\*\*'
-    images:
-      - image: /images/uploads/unit-206.jpg
-      - image: /images/uploads/2.jpg
-      - image: /images/uploads/3.jpg
+    images: []
     subtitle: ''
     title: Move In Ready Homes
     type: header
+  - images:
+      - image: /images/uploads/1.jpg
+      - image: /images/uploads/2.jpg
+      - image: /images/uploads/3.jpg
+    type: images_only
   - images: []
     subtitle: 'As of June 7, 2022'
     title: Availability
