--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -12,6 +12,7 @@ sections:
       - image: /images/uploads/2.jpg
       - image: /images/uploads/3.jpg
     type: images_only
+  - title: '*Others homes in the $400''s soon to be ready for occupancy*'
   - images: []
     subtitle: 'As of June 7, 2022'
     title: Availability
