--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -4,6 +4,11 @@ description: >-
   Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
   ipsum Lorem ipsum Lorem ipsum 
 sections:
+  - content: '##'
+    images:
+      - image: /images/uploads/front-page.png
+    type: images_only
+  - type: header
   - content: |-
       ## Check Availability tab for Move-In Ready options!
 
@@ -27,36 +32,6 @@ sections:
       - image: /images/uploads/20009-spring-run-2020.03.24_9-photo.jpg
     title: ...the perfect life-style community!
     type: images_only
-  - content: ''
-    images:
-      - image: >-
-          /images/uploads/20009-spring-run-2020.04.02_rear-yard-test_15-photo.jpg
-    type: images_only
-  - content: >-
-      Spring Run is a place to play and enjoy a happy life.There will be two
-      large grassed parks for the entire community. The first park is ready for
-      family fun.
-
-
-      The parks are designed for playing and dreaming. The two parks will have
-      playground equipment with slides, climbing and strength & skill features.
-      They will include pickle ball courts, basketball and a pavilion with
-      tables.
-
-
-      The parks will be connected to the community by over 5 miles of trails for
-      walking, jogging and biking. Trails will lead to a future hill-top park
-      with commanding views of the Wasatch mountains and Utah Lake.
-
-
-      There will be 156 townhomes in the Village that will have their own
-      private places to play. They will have a clubhouse, a swimming pool and
-      meandering trails through the village. Each home will have private parking
-      and shared parking for guests will be available.
-    type: content_only
-  - content: ''
-    title: Come have fun with us!
-    type: header
   - content: >-
       [**Aaron Schroeder**](mailto:aaron@utahrealty.com)
       [**801-808-7096**](tel:8018087096)
@@ -80,3 +55,11 @@ sections:
       **Follow our construction progress on Instagram @SpringRunTownhomes**
     title: Appointments to See
     type: content_only
+  - content: ''
+    images:
+      - image: >-
+          /images/uploads/20009-spring-run-2020.04.02_rear-yard-test_15-photo.jpg
+    type: images_only
+  - content: ''
+    title: Come have fun with us!
+    type: header
