Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -11,6 +11,10 @@ sections:
       - image: /images/uploads/1.jpg
       - image: /images/uploads/2.jpg
       - image: /images/uploads/3.jpg
+      - image: /images/uploads/unit-221.jpg
+      - image: /images/uploads/unit-222.jpg
+      - image: /images/uploads/unit-223.jpg
+      - image: /images/uploads/unit-224.jpg
     type: images_only
   - title: '*Others homes in the $400''s soon to be ready for occupancy*'
     type: header
