Update Pages “documents”

--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -13,7 +13,7 @@ sections:
         label: Articles of Incorporation
         url: '#'
       - file: /images/uploads/2019.01.14-hoa-bylaws.pdf
-        label: By Laws
+        label: Bylaws
         url: '#'
       - file: /images/uploads/2019-06-17-notice-of-reivestment-fee-covenant.pdf
         label: Notice of Reinvestment Fee
