--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -13,7 +13,21 @@ sections:
       - image: /images/uploads/summerfun_familybikingwoods-2-1-.jpg
     title: ''
     type: images_only
-  - content: ''
+  - content: >-
+      Spring Run is a place to play and enjoy a happy life. There will be two
+      grassed parks for the entire community. The combined parks will have
+      playground equipment with swings, slides, climbing, a pavilion, & table
+      for playing and dreaming. 
+
+
+      The parks will be connects to the community with open space trails for
+      walking, jogging, and biking. Trails will lead to a hill-top park with
+      commanding views of the Wasatch mountains and Utah Lake. 
+
+
+      The townhomes will also have their own private places to play. It will
+      have a clubhouse, a swimming pool, and meandering trails through the
+      village. Come have fun with us!
     images:
       - image: /images/uploads/20009-spring-run-2020.03.24_9-photo.jpg
     title: ...the perfect life-style community!
