Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -24,18 +24,18 @@ sections:
           /images/uploads/20009-spring-run-2020.04.02_rear-yard-test_15-photo.jpg
     type: images_only
   - content: >-
-      # Spring Run is a place to play and enjoy a happy life. There will be two
+      ## Spring Run is a place to play and enjoy a happy life. There will be two
       grassed parks for the entire community. The combined parks will have
       playground equipment with swings, slides, climbing, a pavilion, & table
       for playing and dreaming. 
 
 
-      # The parks will be connects to the community with open space trails for
+      ## The parks will be connects to the community with open space trails for
       walking, jogging, and biking. Trails will lead to a hill-top park with
       commanding views of the Wasatch mountains and Utah Lake. 
 
 
-      # The townhomes will also have their own private places to play. It will
+      ## The townhomes will also have their own private places to play. It will
       have a clubhouse, a swimming pool, and meandering trails through the
       village. Come have fun with us!
     title: Come have fun with us!
