--- a/data/pages/documents.yml
+++ b/data/pages/documents.yml
@@ -21,7 +21,8 @@ sections:
     title: Spring Run Townhomes & HOA Docs
     type: link_list
   - files:
-      - file: /images/uploads/spring-run-townhomes-purchase-and-sale-agreement.pdf
+      - file: >-
+          /images/uploads/2-22-2022-purchase-and-sale-agreement-no-pref-lender.pdf
         label: Purchase & Sale Agreement
         url: '#'
       - file: /images/uploads/spring-run-townhomes-seller-disclosures-8.28.20.pdf
