Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -9,7 +9,7 @@ sections:
       - image: /images/uploads/208.jpg
     type: images_only
   - images:
-      - image: /images/uploads/2.jpg
+      - image: /images/uploads/website-move-in-ready-bldg-13-2-×-3-in-.png
       - image: /images/uploads/224.jpg
     type: images_only
   - images: []
