--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -2,7 +2,10 @@ slug: Availability
 title: Move in Ready & Availability
 description: townhouse eagle mountain utah
 sections:
-  - title: Move-In Ready
+  - images:
+      - image: /images/uploads/unit-214-move-in-ready.jpg
+    subtitle: Unit 214 will be ready in two weeks
+    title: Move-In Ready
     type: header
   - images: []
     subtitle: 'As of April 29, 2024'
