--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -4,7 +4,7 @@ description: townhouse eagle mountain utah
 sections:
   - images:
       - image: /images/uploads/unit-214-move-in-ready.jpg
-    subtitle: Unit 214 will be ready in two weeks
+    subtitle: 'Unit 214 will be ready the week of May 13, 2024'
     title: Move-In Ready
     type: header
   - images: []
