Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -3,11 +3,10 @@ title: Move in Ready & Availability
 description: townhouse eagle mountain utah
 sections:
   - images: []
-    subtitle: 'Unit 214 will be ready the week of May 20, 2024'
+    subtitle: 'Unit 213 '
     title: Move-In Ready
     type: header
-  - images:
-      - image: /images/uploads/unit-214-move-in-ready.jpg
+  - images: []
     type: images_only
   - images: []
     subtitle: 'As of August 27, 2024'
