Update Pages “availability”

--- a/data/pages/availability.yml
+++ b/data/pages/availability.yml
@@ -9,15 +9,20 @@ sections:
   - title: WE'RE PAYING BUYER AGENT COMMISSIONS
     type: header
   - images:
-      - image: /images/uploads/unit-213-move-in-ready.jpg
+      - image: /images/uploads/unit-213.png
         label: Unit 213
-      - image: /images/uploads/1.jpg
+      - image: /images/uploads/website-move-in-ready-bldg-9-2-×-3-in-.png
+        label: Unit 207
+      - image: /images/uploads/unit-210.png
+        label: Unit 210
+      - image: /images/uploads/unit-221.png
         label: Unit 221
     type: images_only
   - images: []
-    subtitle: 'As of June 19, 2025'
+    subtitle: 'As of July 7, 2025'
     title: Availability
     type: header
   - images:
       - image: /images/uploads/availability-map-phase-c2.jpg
+      - {}
     type: images_only
