Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -1,8 +1,8 @@
 slug: homepage
 title: Homepage
 description: >-
-  Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem
-  ipsum Lorem ipsum Lorem ipsum 
+  Spring Run, Townhomes, Utah Real Estate, Eagle Mountain, For Sale, Townhomes
+  Eagle Mountain
 sections:
   - content: ''
     files:
